<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@drawable/rounded_recycler_view_item_bg"
    android:padding="16dp">

    <TextView
        android:id="@+id/departureTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/departureValueTextView" />

    <TextView
        android:id="@+id/arrivalCountryTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/arrivalCountryValueTextView" />

    <TextView
        android:id="@+id/datesTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/datesValueTextView" />

    <TextView
        android:id="@+id/numberOfNightsTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_nights"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/numberOfNightsValueTextView" />

    <TextView
        android:id="@+id/hotelTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/hotelValueTextView" />

    <TextView
        android:id="@+id/roomTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/roomValueTextView" />

    <TextView
        android:id="@+id/nutritionTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nutrition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nutritionValueTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/departureValueTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Санкт-Петербург" />

    <TextView
        android:id="@+id/arrivalCountryValueTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/departureValueTextView"
        tools:text="Египет, Хургада" />

    <TextView
        android:id="@+id/datesValueTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/arrivalCountryValueTextView"
        tools:text="19.09.2023 – 27.09.2023" />

    <TextView
        android:id="@+id/numberOfNightsValueTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/datesValueTextView"
        tools:text="7 ночей" />

    <TextView
        android:id="@+id/hotelValueTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/numberOfNightsValueTextView"
        tools:text="Steigenberger Makadi" />

    <TextView
        android:id="@+id/roomValueTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/hotelValueTextView"
        tools:text="Стандартный с видом на бассейн или сад" />

    <TextView
        android:id="@+id/nutritionValueTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/roomValueTextView"
        tools:text="Все включено" />


</androidx.constraintlayout.widget.ConstraintLayout>