<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@drawable/rounded_recycler_view_item_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/Global.Style.TextView.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/indicatorLayout"
            android:layout_alignParentStart="true"
            tools:text="Первый турист" />

        <FrameLayout
            android:id="@+id/indicatorLayout"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/indicator_item_bg"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp">

            <ImageView
                android:id="@+id/indicatorImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_indicator" />
        </FrameLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/hiddenContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                style="@style/Global.Style.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                tools:text="Иван" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/surnameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/surname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surnameEditText"
                style="@style/Global.Style.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                tools:text="Иванов" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateOfBirthTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/date_of_birth">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateOfBirthEditText"
                style="@style/Global.Style.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nationalityTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/nationality">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nationalityEditText"
                style="@style/Global.Style.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passportNumberTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/passport_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passportNumberEditText"
                style="@style/Global.Style.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passportValidityPeriodTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/passport_validity_period">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passportValidityPeriodEditText"
                style="@style/Global.Style.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>