<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@drawable/rounded_recycler_view_item_bg"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/Global.Style.TextView.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/customer_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView">

        <nik.borisov.hoteltest.core.presentation.edittext.MaskedEditText
            android:id="@+id/phoneEditText"
            style="@style/Global.Style.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:typeface="monospace"
            mask:allowed_chars="1234567890"
            mask:enable_ime_action="true"
            mask:keep_hint="true"
            mask:mask="+7 (###) ###-##-##"
            mask:mask_hint="**********" />

        <!--        <com.google.android.material.textfield.TextInputEditText-->
        <!--            android:id="@+id/phoneEditText"-->
        <!--            style="@style/Global.Style.TextInputEditText"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:inputType="phone"-->
        <!--            android:maxLength="18"-->
        <!--            tools:text="+7 (951) 555-99-00" />-->

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            style="@style/Global.Style.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:text="examplemail.000@mail.ru" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/descriptionTextView"
        style="@style/Global.Style.TextView.Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/customer_info_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>